deploy/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryosparc-deployment
spec:
  replicas: 1 # TODO: Change to 3
  selector:
    matchLabels:
      app: cryosparc
  template:
    metadata:
      labels:
        app: cryosparc
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cryosparc
          image: cerit.io/cerit/cryosparc:master-v0.2
          imagePullPolicy: Always
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "4Gi"
              cpu: "2"
          command: ["/bin/bash", "-c"]
          args: ["/opt/cryosparc_master/templates/run.sh && while :; do sleep 1000000; done"]
#          args: ["while :; do sleep 1000000; done"]
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
#              add:
#                - SYS_ADMIN
          ports:
            - containerPort: 8080
